--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌩</text></svg>">
+    <!-- meta description -->
+    <meta name="description" content="Bliksemradar.be - Bekijk de bliksem live">
+    <!-- meta author -->
+    <meta name="author" content="Vincent Lammens">
+    <!-- og: image-->
+    <meta property="og:image" content="https://bliksemradar.be/social.png">
 </head>
 
 <style>
